Ease ratelimiting restrictions and add update notification for selfhosted installs

--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -21,7 +21,9 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
