Change version to .1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scholarsome",
-  "version": "1.0.0",
-  "license": "MIT",
+  "version": "1.0.1",
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "ng": "nx",
     "generate": "npx prisma generate",
