--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "typescript": "4.8.4"
   },
   "devDependencies": {
     "@angular-eslint/eslint-plugin": "~14.0.0",
@@ -130,7 +131,6 @@
     "prettier": "^2.6.2",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "tsdoc": "^0.0.4",
-    "typescript": "4.8.4"
+    "tsdoc": "^0.0.4"
   }
 }
