Add post route for initial Anki import functionality

--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -8,7 +8,9 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "rules": {}
+      "rules": {
+        "no-control-regex": "off"
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
