Configure editor to work with existing connections

--- a/compose.yml
+++ b/compose.yml
@@ -42,6 +42,8 @@ services:
       - "SSL_CERT_BASE64=${SSL_CERT_BASE64}"
       - "SCHOLARSOME_RECAPTCHA_SITE=${RECAPTCHA_SITE}"
       - "SCHOLARSOME_RECAPTCHA_SECRET=${RECAPTCHA_SECRET}"
+    volumes:
+      - scholarsome:/data
     depends_on:
       - "mariadb"
       - "redis"
@@ -50,3 +52,4 @@ volumes:
   redis:
     driver: local
   mariadb:
+  scholarsome:
