Add working s3 image uploads, add gzip compression for backend

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,19 @@ REDIS_PORT=
 REDIS_USERNAME=
 REDIS_PASSWORD=
 
+# Data storage configuration
+STORAGE_TYPE=
+
+# Required if storage type is local
+LOCAL_STORAGE_DIR=
+
+# Required if storage type is S3
+S3_STORAGE_ENDPOINT=
+S3_STORAGE_ACCESS_KEY=
+S3_STORAGE_SECRET_KEY=
+S3_STORAGE_REGION=
+S3_STORAGE_BUCKET=
+
 
 # ---
 # Everything past this line is optional
