--- a/.env.compose.example
+++ b/.env.compose.example
@@ -11,6 +11,17 @@ JWT_SECRET=
 # Port to expose Scholarsome on
 HTTP_PORT=
 
+# If using S3, type in "S3"
+# Otherwise, file storage will be managed by Docker Compose
+STORAGE_TYPE=
+
+# Required if storage type is S3
+S3_STORAGE_ENDPOINT=
+S3_STORAGE_ACCESS_KEY=
+S3_STORAGE_SECRET_KEY=
+S3_STORAGE_REGION=
+S3_STORAGE_BUCKET=
+
 
 # ---
 # Everything past this line is optional
