--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@aws-sdk/client-s3": "^3.359.0",
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
@@ -44,7 +45,7 @@
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@mdx-js/react": "^1.6.22",
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/axios": "^0.1.0",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -62,6 +63,7 @@
     "@types/adm-zip": "^0.5.0",
     "@types/better-sqlite3": "^7.6.4",
     "adm-zip": "^0.5.10",
+    "axios": "^1.4.0",
     "bcrypt": "^5.0.1",
     "better-sqlite3": "^8.4.0",
     "bootstrap": "^5.2.3",
@@ -74,6 +76,7 @@
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "nest-puppeteer": "^1.1.1",
+    "nestjs-s3": "^2.0.1",
     "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
@@ -89,6 +92,7 @@
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
+    "sharp": "^0.32.1",
     "tslib": "^2.3.0",
     "typescript": "4.8.4",
     "zone.js": "~0.11.4"
