--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -44,8 +44,8 @@
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
+              "maximumWarning": "1mb",
+              "maximumError": "1.25mb"
             },
             {
               "type": "anyComponentStyle",
