Add support for local media storage, add polyfills for audio in anki uploads

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -21,7 +21,8 @@ REDIS_PASSWORD=
 STORAGE_TYPE=
 
 # Required if storage type is local
-LOCAL_STORAGE_DIR=
+# Absolute filepath
+STORAGE_LOCAL_DIR=
 
 # Required if storage type is S3
 S3_STORAGE_ENDPOINT=
