--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
     "ngx-device-detector": "^5.0.1",
+    "ngx-quill": "^20.0.1",
     "nodemailer": "^6.8.0",
     "nx": "15.9.2",
     "passport": "^0.6.0",
@@ -88,6 +89,7 @@
     "passport-local": "^1.0.0",
     "prism-react-renderer": "^1.3.5",
     "prisma": "^4.15.0",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
@@ -127,6 +129,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/puppeteer": "^7.0.4",
+    "@types/quill": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "concurrently": "^7.4.0",
