Add Quill image resize, add media deletion when removing sets, add SetMedia model

--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -32,7 +32,8 @@
           "apps/front/src/styles.scss"
         ],
         "scripts": [
-          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+          "node_modules/quill/dist/quill.min.js"
         ],
         "ngxEnv": {
           "prefix": "SCHOLARSOME_"
