--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@mdx-js/react": "^1.6.22",
     "@nestjs-modules/mailer": "^1.8.1",
@@ -81,7 +80,7 @@
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
     "ngx-device-detector": "^5.0.1",
-    "ngx-quill": "^20.0.1",
+    "ngx-quill": "^20.0.0",
     "nodemailer": "^6.8.0",
     "nx": "15.9.2",
     "passport": "^0.6.0",
@@ -90,6 +89,8 @@
     "prism-react-renderer": "^1.3.5",
     "prisma": "^4.15.0",
     "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-image-resize-module-ts": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
