Remove video option from editor, change font polyfill to use replaceAll, update docs

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -9,5 +9,10 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "lib": [
+      "ES2021.String"
+    ]
+  }
 }
