Add updated README, additional docs changes, fix build issues with Multer, add badges to header

--- a/.env.compose.example
+++ b/.env.compose.example
@@ -11,11 +11,11 @@ JWT_SECRET=
 # Port to expose Scholarsome on
 HTTP_PORT=
 
-# If using S3, type in "S3"
-# Otherwise, file storage will be managed by Docker Compose
+# Data storage configuration
+# If local, file storage will be managed by Docker Compose
 STORAGE_TYPE=
 
-# Required if storage type is S3
+# Required if storage type is s3
 S3_STORAGE_ENDPOINT=
 S3_STORAGE_ACCESS_KEY=
 S3_STORAGE_SECRET_KEY=
