--- a/.env.docker.example
+++ b/.env.docker.example
@@ -24,7 +24,7 @@ STORAGE_TYPE=
 # Absolute filepath
 STORAGE_LOCAL_DIR=
 
-# Required if storage type is S3
+# Required if storage type is s3
 S3_STORAGE_ENDPOINT=
 S3_STORAGE_ACCESS_KEY=
 S3_STORAGE_SECRET_KEY=
