--- a/compose.yml
+++ b/compose.yml
@@ -29,10 +29,17 @@ services:
       - "NODE_ENV=${NODE_ENV}"
       - "DATABASE_URL=mysql://scholarsome:${DATABASE_PASSWORD}@mariadb:3306/scholarsome"
       - "JWT_SECRET=${JWT_SECRET}"
+      - "STORAGE_TYPE=${STORAGE_TYPE}"
       - "REDIS_HOST=redis"
       - "REDIS_PORT=6379"
       - "REDIS_USERNAME="
       - "REDIS_PASSWORD=${DATABASE_PASSWORD}"
+      - "STORAGE_LOCAL_DIR=/data"
+      - "S3_STORAGE_ENDPOINT=${S3_STORAGE_ENDPOINT}"
+      - "S3_STORAGE_ACCESS_KEY=${S3_STORAGE_ACCESS_KEY}"
+      - "S3_STORAGE_SECRET_KEY=${S3_STORAGE_SECRET_KEY}"
+      - "S3_STORAGE_REGION=${S3_STORAGE_REGION}"
+      - "S3_STORAGE_BUCKET=${S3_STORAGE_BUCKET}"
       - "SMTP_HOST=${SMTP_HOST}"
       - "SMTP_PORT=${SMTP_PORT}"
       - "SMTP_USERNAME=${SMTP_USERNAME}"
