--- a/compose.yml
+++ b/compose.yml
@@ -23,6 +23,7 @@ services:
     restart: always
   scholarsome:
     image: hwgilbert16/scholarsome:latest
+    platform: "linux/amd64"
     ports:
       - "${HTTP_PORT}:8080"
     environment:
