Hotfix to exclude HTML tags from the answers to written response questions

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "html-to-text": "^9.0.5",
     "ioredis": "^5.3.1",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
@@ -97,6 +98,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "sharp": "^0.32.1",
+    "string-similarity": "^4.0.4",
     "tslib": "^2.3.0",
     "typescript": "4.8.4",
     "zone.js": "~0.11.4"
@@ -124,6 +126,7 @@
     "@tsconfig/docusaurus": "^1.0.7",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/html-to-text": "^9.0.1",
     "@types/jest": "29.4.4",
     "@types/node": "~18.7.1",
     "@types/nodemailer": "^6.4.6",
@@ -131,6 +134,7 @@
     "@types/passport-local": "^1.0.34",
     "@types/puppeteer": "^7.0.4",
     "@types/quill": "^2.0.10",
+    "@types/string-similarity": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "concurrently": "^7.4.0",
