--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
+    "joi": "^17.9.2",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "nest-puppeteer": "^1.1.1",
