--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-ts": "^3.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "sharp": "^0.32.1",
