--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:front": "npx nx serve --host=0.0.0.0",
     "start:api": "npx nx serve api",
     "start:docs": "npx nx serve docs",
-    "start:dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:front\" \"npm run start:api\"",
+    "start:dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS, Docusaurus\" -c=\"red,orange,green\" \"npm run start:front\" \"npm run start:api\" \"npm run start:docs\"",
     "serve:node": "npm run migrate && node dist/apps/api/main.js",
     "serve:pm2": "npm run migrate && pm2 start dist/apps/api/main.js --name \"scholarsome\""
   },
