Add docs to main application navbar, rearrange docusaurus page organization

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "nx",
     "generate": "npx prisma generate",
     "migrate": "npx prisma migrate deploy",
-    "build": "npx nx run-many --target=build --projects=front,api --skip-nx-cache",
+    "build": "npx nx run-many --target=build --projects=front,api,docs --skip-nx-cache",
     "build:docs": "npx nx build docs --skip-nx-cache",
     "test": "nx test",
     "lint": "nx run-many --all --target=lint --fix",
@@ -73,6 +73,7 @@
     "class-validator": "^0.14.0",
     "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
     "joi": "^17.9.2",
