1. Updated .env.example. 2. Updated development guide.

--- a/.env.example
+++ b/.env.example
@@ -5,29 +5,29 @@ NODE_ENV=development
 
 # Required if using compose
 # Password to provide for internal database
-DATABASE_PASSWORD=
+DATABASE_PASSWORD=testing
 
 # Complete connection URI to MariaDB
-DATABASE_URL=
+DATABASE_URL=mysql://test:test@localhost:3306/scholarsome
 
 # Random secret used to validate tokens
-JWT_SECRET=
+JWT_SECRET=testing
 
 # Port to expose Scholarsome on
-HTTP_PORT=
+HTTP_PORT=3333
 
 # Redis server details
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=
 
 # Data storage configuration
-STORAGE_TYPE=
+STORAGE_TYPE=local
 
 # Required if storage type is local
 # Absolute filepath
-STORAGE_LOCAL_DIR=
+STORAGE_LOCAL_DIR=/Users/bipin/Desktop
 
 # Required if storage type is s3
 S3_STORAGE_ENDPOINT=
@@ -44,10 +44,10 @@ S3_STORAGE_BUCKET=
 
 # Self-explanatory SMTP fields
 # Necessary for emails to be sent - otherwise, users are verified by default
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USERNAME=
-SMTP_PASSWORD=
+SMTP_HOST=localhost
+SMTP_PORT=25
+SMTP_USERNAME=test
+SMTP_PASSWORD=test
 
 # Domain to use in emails - do not include http
 HOST=
