Rename env file, remove system-specific values, add clarification to dev guide

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -5,7 +5,7 @@ NODE_ENV=development
 
 # Required if using compose
 # Password to provide for internal database
-DATABASE_PASSWORD=testing
+DATABASE_PASSWORD=
 
 # Complete connection URI to MariaDB
 DATABASE_URL=mysql://test:test@localhost:3306/scholarsome
@@ -27,7 +27,7 @@ STORAGE_TYPE=local
 
 # Required if storage type is local
 # Absolute filepath
-STORAGE_LOCAL_DIR=/Users/bipin/Desktop
+STORAGE_LOCAL_DIR=
 
 # Required if storage type is s3
 S3_STORAGE_ENDPOINT=
