Update docs intro page, add host to required section in example environment files

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ JWT_SECRET=
 # Port to expose Scholarsome on
 HTTP_PORT=
 
+# Domain that Scholarsome will be running on
+HOST=
+
 # Redis server details
 REDIS_HOST=
 REDIS_PORT=
@@ -48,9 +51,6 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=
 SMTP_PASSWORD=
-
-# Domain to use in emails - do not include http
-HOST=
 
 # SSL key and cert encoded as base64
 SSL_KEY_BASE64=
