--- a/.env.dev.example
+++ b/.env.dev.example
@@ -16,6 +16,9 @@ JWT_SECRET=testing
 # Port to expose Scholarsome on
 HTTP_PORT=3333
 
+# Domain that Scholarsome will be running on
+HOST=
+
 # Redis server details
 REDIS_HOST=localhost
 REDIS_PORT=6379
@@ -48,9 +51,6 @@ SMTP_HOST=localhost
 SMTP_PORT=25
 SMTP_USERNAME=test
 SMTP_PASSWORD=test
-
-# Domain to use in emails - do not include http
-HOST=
 
 # SSL key and cert encoded as base64
 SSL_KEY_BASE64=
