--- a/compose.yml
+++ b/compose.yml
@@ -26,30 +26,14 @@ services:
     platform: "linux/amd64"
     ports:
       - "${HTTP_PORT}:8080"
+    env_file:
+      - ".env"
     environment:
-      - "NODE_ENV=${NODE_ENV}"
       - "DATABASE_URL=mysql://scholarsome:${DATABASE_PASSWORD}@mariadb:3306/scholarsome"
-      - "JWT_SECRET=${JWT_SECRET}"
-      - "STORAGE_TYPE=${STORAGE_TYPE}"
       - "REDIS_HOST=redis"
       - "REDIS_PORT=6379"
       - "REDIS_USERNAME="
-      - "REDIS_PASSWORD=${DATABASE_PASSWORD}"
       - "STORAGE_LOCAL_DIR=/data"
-      - "S3_STORAGE_ENDPOINT=${S3_STORAGE_ENDPOINT}"
-      - "S3_STORAGE_ACCESS_KEY=${S3_STORAGE_ACCESS_KEY}"
-      - "S3_STORAGE_SECRET_KEY=${S3_STORAGE_SECRET_KEY}"
-      - "S3_STORAGE_REGION=${S3_STORAGE_REGION}"
-      - "S3_STORAGE_BUCKET=${S3_STORAGE_BUCKET}"
-      - "SMTP_HOST=${SMTP_HOST}"
-      - "SMTP_PORT=${SMTP_PORT}"
-      - "SMTP_USERNAME=${SMTP_USERNAME}"
-      - "SMTP_PASSWORD=${SMTP_PASSWORD}"
-      - "HOST=${HOST}"
-      - "SSL_KEY_BASE64=${SSL_KEY_BASE64}"
-      - "SSL_CERT_BASE64=${SSL_CERT_BASE64}"
-      - "SCHOLARSOME_RECAPTCHA_SITE=${RECAPTCHA_SITE}"
-      - "SCHOLARSOME_RECAPTCHA_SECRET=${RECAPTCHA_SECRET}"
     volumes:
       - scholarsome:/data
     depends_on:
