Add OpenAPI to docusaurus

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/swagger": "^7.1.4",
     "@nestjs/throttler": "^3.1.0",
     "@ngx-env/builder": "^15.2.1",
     "@nrwl/angular": "15.9.2",
@@ -97,6 +98,7 @@
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redocusaurus": "^1.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "sharp": "^0.32.1",
