--- a/package.json
+++ b/package.json
@@ -45,18 +45,16 @@
     "@mdx-js/react": "^1.6.22",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "10.1.2",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "10.1.2",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "10.1.2",
     "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/swagger": "^7.1.4",
+    "@nestjs/swagger": "7.1.4",
     "@nestjs/throttler": "^3.1.0",
     "@ngx-env/builder": "^15.2.1",
-    "@nrwl/angular": "15.9.2",
-    "@nrwl/nx-cloud": "15.3.5",
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "^4.15.0",
@@ -87,7 +85,7 @@
     "ngx-device-detector": "^5.0.1",
     "ngx-quill": "^20.0.0",
     "nodemailer": "^6.8.0",
-    "nx": "15.9.2",
+    "nx": "16.5.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -105,7 +103,9 @@
     "string-similarity": "^4.0.4",
     "tslib": "^2.3.0",
     "typescript": "4.8.4",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "nx-cloud": "16.1.1",
+    "@nx/angular": "16.5.5"
   },
   "devDependencies": {
     "@angular-eslint/eslint-plugin": "~14.0.0",
@@ -115,17 +115,8 @@
     "@angular/language-service": "~14.2.0",
     "@docusaurus/module-type-aliases": "2.1.0",
     "@golevelup/ts-jest": "^0.3.7",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "15.9.2",
-    "@nrwl/cypress": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/nest": "15.9.2",
-    "@nrwl/node": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@nestjs/schematics": "10.0.1",
+    "@nestjs/testing": "10.1.2",
     "@tsconfig/docusaurus": "^1.0.7",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
@@ -136,10 +127,10 @@
     "@types/passport-local": "^1.0.34",
     "@types/puppeteer": "^7.0.4",
     "@types/quill": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "concurrently": "^7.4.0",
-    "cypress": "^12.2.0",
+    "cypress": "12.17.2",
     "eslint": "~8.15.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "8.1.0",
@@ -147,10 +138,18 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~12.2.0",
+    "jest-preset-angular": "13.1.1",
     "prettier": "^2.6.2",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "tsdoc": "^0.0.4"
+    "tsdoc": "^0.0.4",
+    "@nx/workspace": "16.5.5",
+    "@nx/linter": "16.5.5",
+    "@nx/js": "16.5.5",
+    "@nx/cypress": "16.5.5",
+    "@nx/eslint-plugin": "16.5.5",
+    "@nx/node": "16.5.5",
+    "@nx/jest": "16.5.5",
+    "@nx/nest": "16.5.5"
   }
 }
