--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "nest-puppeteer": "^1.1.1",
+    "nest-winston": "^1.9.4",
     "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
@@ -105,6 +106,7 @@
     "string-similarity": "^4.0.4",
     "tslib": "^2.3.0",
     "typescript": "4.8.4",
+    "winston": "^3.10.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
