--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -5,7 +5,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "camelcase": ["error", { "allow": ["setId_userId", "leitnerSetId_cardId"] }]
+        "camelcase": ["error", { "allow": ["setId_userId", "leitnerSetId_cardId", "jwt_decode"] }]
       }
     },
     {
