--- a/compose.yml
+++ b/compose.yml
@@ -25,11 +25,12 @@ services:
     image: hwgilbert16/scholarsome:latest
     platform: "linux/amd64"
     ports:
-      - "${HTTP_PORT}:8080"
+      - "${HTTP_PORT}:${HTTP_PORT}"
     environment:
       - "NODE_ENV=${NODE_ENV}"
       - "DATABASE_URL=mysql://scholarsome:${DATABASE_PASSWORD}@mariadb:3306/scholarsome"
       - "JWT_SECRET=${JWT_SECRET}"
+      - "HTTP_PORT=${HTTP_PORT}"
       - "STORAGE_TYPE=${STORAGE_TYPE}"
       - "REDIS_HOST=redis"
       - "REDIS_PORT=6379"
