Add media exporting, csv importing, rearrange study set page

--- a/package.json
+++ b/package.json
@@ -74,13 +74,13 @@
     "class-validator": "^0.14.0",
     "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
+    "csv-parse": "^5.5.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
     "joi": "^17.9.2",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
-    "nest-puppeteer": "^1.1.1",
     "nest-winston": "^1.9.4",
     "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
@@ -136,7 +136,6 @@
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/puppeteer": "^7.0.4",
     "@types/quill": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
