Add filename sanitization and updated docs list

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "redocusaurus": "^1.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
+    "sanitize-filename-ts": "^1.0.2",
     "sharp": "^0.32.6",
     "string-similarity": "^4.0.4",
     "tslib": "^2.3.0",
