--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "sanitize-filename-ts": "^1.0.2",
+    "sanitize-html": "^2.11.0",
     "sharp": "^0.32.6",
     "string-similarity": "^4.0.4",
     "tslib": "^2.3.0",
