--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start:docs": "npx nx serve docs",
     "start:dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS, Docusaurus\" -c=\"red,orange,green\" \"npm run start:front\" \"npm run start:api\" \"npm run start:docs\"",
     "serve:node": "npm run migrate && node dist/apps/api/main.js",
-    "serve:pm2": "npm run migrate && pm2 start dist/apps/api/main.js --name \"scholarsome\""
+    "serve:pm2": "npm run migrate && pm2 start dist/apps/api/main.js --name \"scholarsome\"",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -118,6 +119,8 @@
     "@angular-eslint/template-parser": "~14.0.0",
     "@angular/cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
     "@docusaurus/module-type-aliases": "2.1.0",
     "@golevelup/ts-jest": "^0.3.7",
     "@nestjs/schematics": "^9.0.0",
@@ -148,6 +151,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^9.0.11",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
