--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "csv-parse": "^5.5.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "ioredis": "^5.3.1",
     "joi": "^17.9.2",
     "jwt-decode": "^3.1.2",
