--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start:docs": "npx nx serve docs",
     "start:dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS, Docusaurus\" -c=\"red,orange,green\" \"npm run start:front\" \"npm run start:api\" \"npm run start:docs\"",
     "serve:node": "npm run migrate && node dist/apps/api/main.js",
-    "serve:pm2": "npm run migrate && pm2 start dist/apps/api/main.js --name \"scholarsome\""
+    "serve:pm2": "npm run migrate && pm2 start dist/apps/api/main.js --name \"scholarsome\"",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -77,6 +78,7 @@
     "csv-parse": "^5.5.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "ioredis": "^5.3.1",
     "joi": "^17.9.2",
     "jwt-decode": "^3.1.2",
@@ -104,7 +106,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "sanitize-filename-ts": "^1.0.2",
-    "sanitize-html": "^2.11.0",
+    "sanitize-html": "^2.12.1",
     "sharp": "^0.32.6",
     "string-similarity": "^4.0.4",
     "tslib": "^2.3.0",
@@ -118,6 +120,8 @@
     "@angular-eslint/template-parser": "~14.0.0",
     "@angular/cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
     "@docusaurus/module-type-aliases": "2.1.0",
     "@golevelup/ts-jest": "^0.3.7",
     "@nestjs/schematics": "^9.0.0",
@@ -148,6 +152,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^9.0.11",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
