--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
-    "@nestjs/passport": "^9.0.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^7.1.4",
@@ -93,8 +93,8 @@
     "nodemailer": "^6.9.9",
     "nx": "15.9.2",
     "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "prism-react-renderer": "^1.3.5",
     "prisma": "^4.15.0",
     "quill": "^1.3.7",
