--- a/package.json
+++ b/package.json
@@ -46,19 +46,18 @@
     "@mdx-js/react": "^1.6.22",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "10.0.2",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "10.0.2",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "10.0.2",
     "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/swagger": "^7.1.4",
-    "@nestjs/throttler": "^3.1.0",
+    "@nestjs/swagger": "7.0.2",
+    "@nestjs/throttler": "^5.1.2",
     "@ngx-env/builder": "^15.2.1",
-    "@nrwl/angular": "15.9.2",
-    "@nrwl/nx-cloud": "15.3.5",
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
+    "@nx/angular": "18.0.8",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "^4.15.0",
     "@schematics/angular": "^14.2.3",
@@ -67,7 +66,7 @@
     "@types/multer": "^1.4.7",
     "@types/string-similarity": "^4.0.0",
     "adm-zip": "^0.5.10",
-    "axios": "^1.6.0",
+    "axios": "1.6.0",
     "bcrypt": "^5.0.1",
     "better-sqlite3": "^8.4.0",
     "bootstrap": "^5.2.3",
@@ -91,7 +90,7 @@
     "ngx-device-detector": "^5.0.1",
     "ngx-quill": "^20.0.0",
     "nodemailer": "^6.9.9",
-    "nx": "15.9.2",
+    "nx": "18.0.8",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
@@ -124,41 +123,41 @@
     "@commitlint/config-conventional": "^19.0.3",
     "@docusaurus/module-type-aliases": "2.1.0",
     "@golevelup/ts-jest": "^0.3.7",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "15.9.2",
-    "@nrwl/cypress": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/nest": "15.9.2",
-    "@nrwl/node": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@nestjs/schematics": "10.0.1",
+    "@nestjs/testing": "10.0.2",
+    "@nx/cypress": "18.0.8",
+    "@nx/eslint": "18.0.8",
+    "@nx/eslint-plugin": "18.0.8",
+    "@nx/jest": "18.0.8",
+    "@nx/js": "18.0.8",
+    "@nx/nest": "18.0.8",
+    "@nx/node": "18.0.8",
+    "@nx/webpack": "^18.0.8",
+    "@nx/workspace": "18.0.8",
     "@tsconfig/docusaurus": "^1.0.7",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "29.4.4",
-    "@types/node": "~18.7.1",
+    "@types/node": "18.16.9",
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/quill": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "concurrently": "^7.4.0",
-    "cypress": "^12.2.0",
-    "eslint": "~8.15.0",
+    "cypress": "^13.0.0",
+    "eslint": "8.48.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "2.13.4",
     "husky": "^9.0.11",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~12.2.0",
+    "jest-preset-angular": "13.1.6",
     "prettier": "^2.6.2",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.2",
     "ts-node": "10.9.1",
     "tsdoc": "^0.0.4"
   }
