--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/architect": "^0.1502.8",
-    "@angular-devkit/build-angular": "~14.2.0",
-    "@angular-devkit/core": "^15.2.4",
-    "@angular/animations": "~14.2.0",
-    "@angular/cdk": "^14.2.2",
-    "@angular/common": "~14.2.0",
-    "@angular/compiler": "~14.2.0",
-    "@angular/compiler-cli": "~14.2.0",
-    "@angular/core": "~14.2.0",
-    "@angular/forms": "~14.2.0",
-    "@angular/localize": "~14.2.0",
-    "@angular/platform-browser": "~14.2.0",
-    "@angular/platform-browser-dynamic": "~14.2.0",
-    "@angular/router": "~14.2.0",
+    "@angular-devkit/architect": "^0.1602.12",
+    "@angular-devkit/build-angular": "~16.2.12",
+    "@angular-devkit/core": "^16.2.12",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.14",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/localize": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "@aws-sdk/client-s3": "^3.359.0",
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
@@ -109,7 +109,7 @@
     "sharp": "^0.32.6",
     "string-similarity": "^4.0.4",
     "tslib": "^2.3.0",
-    "typescript": "4.8.4",
+    "typescript": "^4.9.5",
     "winston": "^3.10.0",
     "zone.js": "~0.11.4"
   },
@@ -118,7 +118,7 @@
     "@angular-eslint/eslint-plugin-template": "~14.0.0",
     "@angular-eslint/template-parser": "~14.0.0",
     "@angular/cli": "~14.2.0",
-    "@angular/language-service": "~14.2.0",
+    "@angular/language-service": "16.0.0",
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
     "@docusaurus/module-type-aliases": "2.1.0",
@@ -132,7 +132,7 @@
     "@nx/js": "18.0.8",
     "@nx/nest": "18.0.8",
     "@nx/node": "18.0.8",
-    "@nx/webpack": "^18.0.8",
+    "@nx/webpack": "18.0.8",
     "@nx/workspace": "18.0.8",
     "@tsconfig/docusaurus": "^1.0.7",
     "@types/cookie-parser": "^1.4.3",
@@ -162,3 +162,4 @@
     "tsdoc": "^0.0.4"
   }
 }
+
