--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
       redis-server
       --save 900 1
       --appendonly yes
-      --appendfilename "/data/appendonly.aof"
+      --appendfilename "appendonly.aof"
       --dir "/data"
       --requirepass ${DATABASE_PASSWORD}
     volumes:
